# Frednator-Electron-Version

./: .gitignore  .prettierignore  CMakeLists.txt  Makefile  README.md  binding.gyp  cmake_install.cmake  package-lock.json  package.json  saida.txt
includes-competition-code/motion/runswift/Eigen/src/Sparse/: AmbiVector.h
includes-competition-code/perception-fred/include/: ballDetector2.hpp  featureDetector.hpp  yellowDetector.hpp
includes-competition-code/perception-fred/src/: ballDetector2.cpp  ellipseDetector.cpp  yellowDetector.cpp
includes-competition-code/perception/include/: featureDetector.hpp  fieldDetector2.hpp  lineDetector.hpp  yellowDetector.hpp
includes-competition-code/perception/src/: fieldDetector.cpp  fieldDetector2.cpp  lineDetector.cpp  yellowDetector.cpp
includes-competition-code/unboard/: unBoard.cpp  unBoard.hpp
perception-classes/perception/include/: yellowDetector.hpp
perception-classes/perception/src/: yellowDetector.cpp
src/: index.html  index.js
src/cpp/: cvMatUtil.cc  fieldDetector2Util.cc  lineDetectorUtil.cc  module.cc  videoUtil.cc  yellowDetectorUtil.cc
src/css/: main.css
src/js/: app.js  imgCreation.js  imgCreationWorker.js  module.js  napi-tester.js
src/python/: cpp-file-reader.py  cppFileReader.py  fileGenarator.py
src/templates/: detectorUtil.cc  templates-CMakeLists.txt  templates-app.js  templates-detectorUtil.cc  templates-imgCreation.js  templates-imgCreationWorker.js  templates-index.html
